examples/test/testpolicy5893.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5893
  namespace: namespace119
spec:
  podSelector:
    matchLabels:
      key23: value49
      key6: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value35
          key24: value9
      podSelector:
        matchLabels:
          key12: value37
          key23: value7
